# Zila

./: .gitignore  CHANGELOG.MD  Cargo.toml  README.md
.github/workflows/: ci.yml  publish.yml
archived/: CHANGELOG.MD  README.md
archived/tests/: validation.test.ts
src/: cli.rs  index.ts  info.ts  main.rs  prompts.rs  scaffold.rs
src/templates/: express.rs  hono.rs  mod.rs  next.rs  react.rs  vue.rs
templates/express/: package.json  tsconfig.json
templates/express/.devcontainer/: devcontainer.json
templates/express/src/: app.ts  index.ts
templates/express/src/controllers/: index.ts
templates/express/src/lib/: config.ts  db.ts
templates/express/src/middleware/: errorHandler.ts  logger.ts  notFound.ts
templates/express/src/routes/: index.ts
templates/hono/: README.md  package.json
templates/hono/src/: app.ts  index.ts
templates/hono/src/controllers/: index.ts
templates/hono/src/lib/: config.ts  db.ts
templates/hono/src/middleware/: errorHandler.ts  logger.ts  notFound.ts
templates/hono/src/routes/: index.ts
templates/react/: README.md  index.html  package.json
templates/react/src/: App.css  App.tsx
templates/vue/: package.json  pnpm-lock.yaml
