[package]
name = "zila"
version = "0.1.0"
edition = "2024"
description = "Zila spins up a ts project for you in no time"
license = "MIT"
repository = "https://github.com/DGwebdes/Zila"
readme = "README.md"
keywords = ["cli", "scaffold", "templates", "typescript", "frameworks"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
dialoguer = "0.12"
colored = "3.1.1"
anyhow = "1"
